# claude-learn

./: .gitignore
.claude/: settings.local.json
ai-video-generation/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
ai-video-generation/alembic/: alembic.ini  env.py
ai-video-generation/alembic/versions/: 0001_initial_schema.py
ai-video-generation/app/: config.py  main.py
ai-video-generation/app/api/: files.py  jobs.py
ai-video-generation/app/clients/: elevenlabs_client.py  fal_client.py  kling_client.py  replicate_client.py  runway_client.py
ai-video-generation/app/models/: artifact.py  job.py
ai-video-generation/app/pipeline/: orchestrator.py  state.py  tasks.py
ai-video-generation/app/pipeline/agents/: assembly_agent.py  audio_agent.py  image_agent.py  prompt_agent.py  selector_agent.py  video_agent.py
ai-video-generation/app/schemas/: job.py  pipeline.py
ai-video-generation/app/services/: job_service.py  storage.py
ai-video-generation/app/utils/: cost_tracker.py  image.py  video.py
ai-video-generation/tests/: conftest.py
ai-video-generation/tests/test_agents/: test_prompt_agent.py
ai-video-generation/tests/test_clients/: test_fal_client.py  test_kling_client.py
ai-video-generation/tests/test_pipeline/: test_orchestrator.py
chromium/: 01-webui-va-mojo.md  02-polymer-custom-elements.md  03-shadow-dom-va-styling.md  04-events.md  README.md
chromium-native/: README.md
cpp/: README.md
cqrs-saga-event-sourcing/: README.md
design-patterns/: 00-gioi-thieu.md
elasticsearch/: README.md
jenkins-cicd/: README.md
(+4094 files in other folders)
