[tool.poetry]
name = "ai-video-generator"
version = "0.1.0"
description = "Agentic AI video generation pipeline"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"

# Web
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
python-multipart = "^0.0.12"

# Task queue
celery = { extras = ["redis"], version = "^5.4.0" }
redis = "^5.2.0"

# Database
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
alembic = "^1.14.0"

# Storage
boto3 = "^1.35.0"

# AI APIs
openai = "^1.55.0"
replicate = "^1.0.0"
fal-client = "^0.5.0"
runwayml = "^0.1.0"
elevenlabs = "^1.9.0"
httpx = "^0.28.0"

# Image/Video processing
Pillow = "^11.0.0"
opencv-python = "^4.10.0"

# Utilities
pydantic-settings = "^2.7.0"
structlog = "^24.4.0"
aiofiles = "^24.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
